attempt to fix layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -987,7 +987,9 @@ margin-bottom: 0px;
     max-height: 20vh;
     position: absolute;
     bottom: 0;
+    right:0;
     width: 100vw;
+    overflow: hidden;
     background: #ffffff;
     display: flex;
     flex-direction: row;
